# LBoE

./: .gitignore  Cargo.toml  LBoE.md  README.md  command_example.txt  converttoaiff  index.html  intro_p8.txt  lboe.txt  p0.aiff  p0.txt  p1  p100.txt  p101  p102.txt  p103  p106  p107.txt  p108.txt  p109.txt  p11.txt  p110  p111  p112.txt  p114.txt  p115  p116  p117.txt  p118  p119.txt  p12.txt  p120  p121  p122  p123  p124.txt  p125  p126  p127.txt  p128.txt  (+215 more)
.githooks/: pre-push
.github/workflows/: converttoaiff.yml  release.yml  rust.yml
scripts/: dist.sh
src/: lib.rs  main.rs
