[package]
name = "lboe"
version = "0.2.0"
edition = "2021"
description = "Lost Book of Enki - A TUI reader for Zecharia Sitchin's work"
authors = ["RandyMcMillan"]
license = "MIT"
repository = "https://github.com/RandyMcMillan/LBoE"
homepage = "https://github.com/RandyMcMillan/LBoE"

[workspace]
members = ["."]

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
allow-dirty = ["ci"]

[[bin]]
name = "lboe"
path = "src/bin/lboe.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
